disable track transition when resizing to stop overflow

--- a/src/carousel/index.css
+++ b/src/carousel/index.css
@@ -12,7 +12,6 @@
   padding: 0;
   overflow: hidden;
   display: block;
-  transform: translate3d(0, 0, 0)
 }
 
 .track {
